# Snake3D_public

./: .gitignore  LICENSE  README.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/me/snake3d/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  PlatformAndroid.cpp  Renderer.cpp  lib
Android/app/src/main/java/com/me/snake3d/: MainActivity.kt
Android/app/src/test/java/com/me/snake3d/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
PC/: PlatformPC.cpp  Snake3D.sln  Snake3D.vcxproj  Snake3D.vcxproj.filters  snake3d3_main.cpp
PC/Snake3D_public.xcodeproj/: project.pbxproj
iOS/Snake-iOS/: AppDelegate.h  AppDelegate.m  PlatformIOS.cpp  SnakeView.h  SnakeView.mm  SnakeViewController.mm  main.m
iOS/Snake-iOS.xcodeproj/: project.pbxproj
iOS/Snake-iOS.xcodeproj/project.xcworkspace/xcuserdata/oravnat.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Snake-iOS.xcodeproj/xcshareddata/xcschemes/: Snake-iOS.xcscheme
iOS/Snake-iOS/Base.lproj/: Main.storyboard
lib/: BaseGame.cpp  BaseGame.hpp  Door.cpp  Entity.cpp  Entity.hpp  Matrix.cpp  Matrix.hpp  MeshReader.hpp  Model.hpp  OpenGL.hpp  Plane.hpp  Player.hpp  Prize.cpp  Prize.hpp  SnakeGame.cpp  SnakeRenderer.cpp  SnakeRenderer.hpp  Sphere.cpp  Sphere.hpp  Tail.hpp  TakableObject.cpp  TakableObject.hpp  Vector.cpp  Vector.hpp  defines.hpp
lib/examples/SnakeGame/: Ball.cpp  Ball.hpp  Bullet.cpp  Bullet.hpp  Car.cpp  Car.hpp  Door.hpp  Level.cpp  Level.hpp  Plane.cpp  Player.cpp  SnakeGame.hpp  Tail.cpp  Wall.cpp  Wall.hpp
